--- a/Windows/Chordbook.tex
+++ b/Windows/Chordbook.tex
@@ -26,98 +26,82 @@
 \renewcommand{\notebgcolor}{notes}
 \renewcommand\printchord[1]{\footnotesize\sffamily\textit{\textcolor{linkcolor}{{#1}}}}
 
-% BEGINN
-
-%    \songsection{Entries sort by Title}
-%    \vspace*{5mm}
-%        \begin{center}
-%            \begin{longtable}{|*{4}{l|}}  \hline
-%                \textbf{Title}  &   \textbf{Artist} &   \textbf{Comment}    &   \textbf{Page}   \\  \hline \endhead
-%                \../src{table_title}
-%            \end{longtable}
-%        \end{center}
-%
-%    \clearpage
-%    \songsection{Entries sort by Artist}
-%    \vspace*{5mm}
-%        \begin{center}
-%            \begin{longtable}{|*{4}{l|}}  \hline
-%                \textbf{Artist} &   \textbf{Title}  &   \textbf{Comment}    &   \textbf{Page}   \\  \hline \endhead
-%                \../src{table_artist}
-%            \end{longtable}
-%        \end{center}
-
     \clearpage
     \songsection{A Capella}
         \begin{songs}{}
-            \input{../src/walkdownthatlonesomeroad}          \sclearpage     % #1
-            \input{../src/madworld}                          %\sclearpage     % #2
+            \input{../src/walkdownthatlonesomeroad}         \sclearpage     % #1
+            \input{../src/madworld}                                         % #2
         \end{songs}
 
     \clearpage
     \songsection{Classic}
         \begin{songs}{}
-            \input{../src/derleiermann.tex}                  %\sclearpage     % #1
+            \input{../src/derleiermann.tex}                                 % #1
         \end{songs}
 
     \clearpage
     \songsection{Folk and Medieval}
         \begin{songs}{}
-            \input{../src/dasbierichinderrechtentrug}        \sclearpage     % #1
-            \input{../src/derwandersmann}                    \sclearpage     % #2
-            \input{../src/dunklestunde}                      \sclearpage     % #3
-            \input{../src/geisterschiff}                     \sclearpage     % #4
-            \input{../src/icourtedaweegirl.tex}              \sclearpage     % #5
-            \input{../src/i_see_fire}                        \sclearpage     % #6
-            \input{../src/mordaufdemabort}                   \sclearpage     % #7
-            \input{../src/stepitoutmary}                     \sclearpage     % #8
-            \input{../src/thebardssong}                      \sclearpage     % #9
-            \input{../src/thebonnyshipthediamond}            \sclearpage     % #10
-            \input{../src/thedragonborncomes}                \sclearpage     % #11
-            \input{../src/therattlinbog}                     \sclearpage     % #12
-            \input{../src/thewildrover}                      \sclearpage     % #13
-            \input{../src/willstdu}                          \sclearpage     % #14
-            \input{../src/yejackobites}                      %\sclearpage     % #15
+            \input{../src/dasbierichinderrechtentrug}       \sclearpage     % #1
+            \input{../src/derwandersmann}                   \sclearpage     % #2
+            \input{../src/dunklestunde}                     \sclearpage     % #3
+            \input{../src/geisterschiff}                    \sclearpage     % #4
+            \input{../src/grausinddieschwingen}             \sclearpage     % #5
+            \input{../src/icourtedaweegirl}                 \sclearpage     % #6
+            \input{../src/ihrsonah}                         \sclearpage     % #7
+            \input{../src/i_see_fire}                       \sclearpage     % #8
+            \input{../src/mordaufdemabort}                  \sclearpage     % #9
+            \input{../src/nebelueberdenauen}                \sclearpage     % #10
+            \input{../src/ohadelsmann}                      \sclearpage     % #11
+            \input{../src/stepitoutmary}                    \sclearpage     % #12
+            \input{../src/thebardssong}                     \sclearpage     % #13
+            \input{../src/thebonnyshipthediamond}           \sclearpage     % #14
+            \input{../src/thedragonborncomes}               \sclearpage     % #15
+            \input{../src/therattlinbog}                    \sclearpage     % #16
+            \input{../src/thewildrover}                     \sclearpage     % #17
+            \input{../src/willstdu}                         \sclearpage     % #18
+            \input{../src/woutmitdenwoelfen}                \sclearpage     % #19
+            \input{../src/yejackobites}                                     % #20
         \end{songs}
 
     \clearpage
     \songsection{Fun}
         \begin{songs}{}
-            \input{../src/dragonball}                        \sclearpage     % #1
-            \input{../src/fassbierpaladosen}                 \sclearpage     % #2
-            \input{../src/hesapirate}                        \sclearpage     % #3
-            \input{../src/trigardon}                         \sclearpage     % #4
-            \input{../src/untotaufurlaub}                    %\sclearpage     % #5
+            \input{../src/dragonball}                       \sclearpage     % #1
+            \input{../src/fassbierpaladosen}                \sclearpage     % #2
+            \input{../src/hesapirate}                       \sclearpage     % #3
+            \input{../src/trigardon}                        \sclearpage     % #4
+            \input{../src/untotaufurlaub}                                   % #5
         \end{songs}{}
 
     \clearpage
     \songsection{Modern}{}
         \begin{songs}{}
-            \input{../src/rollinginthedeep.tex}              \sclearpage     % #1
-            \input{../src/timshel}                           %\sclearpage     % #2
+            \input{../src/rollinginthedeep.tex}             \sclearpage     % #1
+            \input{../src/timshel}                                          % #2
         \end{songs}
 
     \clearpage
     \songsection{Oldies}
         \begin{songs}{}
-            \input{../src/and_so_it_goes}                    \sclearpage     % #1
-            \input{../src/backinthehighlife}                 \sclearpage     % #2
-            \input{../src/blackbird}                         \sclearpage     % #3
-            \input{../src/dimming_of_the_day}                \sclearpage     % #4
-            \input{../src/fragile}                           \sclearpage     % #5
-            \input{../src/havent_we_lost_enough}             \sclearpage     % #6
-            \input{../src/helplesslyhoping}                  \sclearpage     % #7
-            \input{../src/itdoesntmatter}                    \sclearpage     % #8
-            \input{../src/lives_in_the_balance}              \sclearpage     % #9
-            \input{../src/upwherewebelong}                   \sclearpage     % #10
-            \input{../src/sailingtophiladelphia}             \sclearpage     % #11
-            \input{../src/teach_your_children}               \sclearpage     % #12
-            \input{../src/thegreenfieldsoffrance}            %\sclearpage     % #13
+            \input{../src/and_so_it_goes}                   \sclearpage     % #1
+            \input{../src/backinthehighlife}                \sclearpage     % #2
+            \input{../src/blackbird}                        \sclearpage     % #3
+            \input{../src/dimming_of_the_day}               \sclearpage     % #4
+            \input{../src/fragile}                          \sclearpage     % #5
+            \input{../src/havent_we_lost_enough}            \sclearpage     % #6
+            \input{../src/helplesslyhoping}                 \sclearpage     % #7
+            \input{../src/itdoesntmatter}                   \sclearpage     % #8
+            \input{../src/lives_in_the_balance}             \sclearpage     % #9
+            \input{../src/upwherewebelong}                  \sclearpage     % #10
+            \input{../src/sailingtophiladelphia}            \sclearpage     % #11
+            \input{../src/teach_your_children}              \sclearpage     % #12
+            \input{../src/thegreenfieldsoffrance}                           % #13
         \end{songs}
 
     \clearpage
     \songsection{Other}
         \begin{songs}{}
-            \input{../src/kaperfahrt}                        %\sclearpage     % #1
+            \input{../src/kaperfahrt}                                       % #1
         \end{songs}
 \end{document}
