--- a/TeX/Chordbook.tex
+++ b/TeX/Chordbook.tex
@@ -29,79 +29,90 @@
     \clearpage
     \songsection{A Capella}
         \begin{songs}{}
-            \input{../src/walkdownthatlonesomeroad}         \sclearpage     % #1
-            \input{../src/madworld}                                         % #2
+            \input{../src/hasso}                            \sclearpage
+            \input{../src/madworld}                         \sclearpage
+            \input{../src/walkdownthatlonesomeroad}
         \end{songs}
 
     \clearpage
     \songsection{Classic}
         \begin{songs}{}
-            \input{../src/derleiermann.tex}                                 % #1
+            \input{../src/derleiermann}
         \end{songs}
 
     \clearpage
     \songsection{Folk and Medieval}
         \begin{songs}{}
-            \input{../src/dasbierichinderrechtentrug}       \sclearpage     % #1
-            \input{../src/derwandersmann}                   \sclearpage     % #2
-            \input{../src/dunklestunde}                     \sclearpage     % #3
-            \input{../src/geisterschiff}                    \sclearpage     % #4
-            \input{../src/grausinddieschwingen}             \sclearpage     % #5
-            \input{../src/icourtedaweegirl}                 \sclearpage     % #6
-            \input{../src/ihrsonah}                         \sclearpage     % #7
-            \input{../src/i_see_fire}                       \sclearpage     % #8
-            \input{../src/mordaufdemabort}                  \sclearpage     % #9
-            \input{../src/nebelueberdenauen}                \sclearpage     % #10
-            \input{../src/ohadelsmann}                      \sclearpage     % #11
-            \input{../src/stepitoutmary}                    \sclearpage     % #12
-            \input{../src/thebardssong}                     \sclearpage     % #13
-            \input{../src/thebonnyshipthediamond}           \sclearpage     % #14
-            \input{../src/thedragonborncomes}               \sclearpage     % #15
-            \input{../src/therattlinbog}                    \sclearpage     % #16
-            \input{../src/thewildrover}                     \sclearpage     % #17
-            \input{../src/willstdu}                         \sclearpage     % #18
-            \input{../src/woutmitdenwoelfen}                \sclearpage     % #19
-            \input{../src/yejackobites}                                     % #20
+            \input{../src/dasbierichinderrechtentrug}       \sclearpage
+            \input{../src/derwandersmann}                   \sclearpage
+            \input{../src/dunklestunde}                     \sclearpage
+            \input{../src/geisterschiff}                    \sclearpage
+            \input{../src/grausinddieschwingen}             \sclearpage
+            \input{../src/icourtedaweegirl}                 \sclearpage
+            \input{../src/ihrsonah}                         \sclearpage
+            \input{../src/i_see_fire}                       \sclearpage
+            \input{../src/kleidausrosen}                    \sclearpage
+            \input{../src/makingupthemiles}                 \sclearpage
+            \input{../src/mordaufdemabort}                  \sclearpage
+            \input{../src/nebelueberdenauen}                \sclearpage
+            \input{../src/ohadelsmann}                      \sclearpage
+            \input{../src/prinzessin}                       \sclearpage
+            \input{../src/stepitoutmary}                    \sclearpage
+            \input{../src/tanzmitmir}                       \sclearpage
+            \input{../src/thebardssong}                     \sclearpage
+            \input{../src/thebonnyshipthediamond}           \sclearpage
+            \input{../src/thedragonborncomes}               \sclearpage
+            \input{../src/therattlinbog}                    \sclearpage
+            \input{../src/thewildrover}                     \sclearpage
+            \input{../src/trunckenbolde}                    \sclearpage
+            \input{../src/willstdu}                         \sclearpage
+            \input{../src/woutmitdenwoelfen}                \sclearpage
+            \input{../src/yejackobites}
         \end{songs}
 
     \clearpage
     \songsection{Fun}
         \begin{songs}{}
-            \input{../src/dragonball}                       \sclearpage     % #1
-            \input{../src/fassbierpaladosen}                \sclearpage     % #2
-            \input{../src/hesapirate}                       \sclearpage     % #3
-            \input{../src/trigardon}                        \sclearpage     % #4
-            \input{../src/untotaufurlaub}                                   % #5
+            \input{../src/dienackteelfe}                    \sclearpage
+            \input{../src/dragonball}                       \sclearpage
+            \input{../src/fassbierpaladosen}                \sclearpage
+            \input{../src/hesapirate}                       \sclearpage
+            \input{../src/kickapoo}                         \sclearpage
+            \input{../src/trigardon}                        \sclearpage
+            \input{../src/untotaufurlaub}
         \end{songs}{}
 
     \clearpage
-    \songsection{Modern}{}
+    \songsection{Modern / Rock}{}
         \begin{songs}{}
-            \input{../src/rollinginthedeep.tex}             \sclearpage     % #1
-            \input{../src/timshel}                                          % #2
+            \input{../src/everythingburns}                  \sclearpage
+            \input{../src/rollinginthedeep}                 \sclearpage
+            \input{../src/timshel}
         \end{songs}
 
     \clearpage
     \songsection{Oldies}
         \begin{songs}{}
-            \input{../src/and_so_it_goes}                   \sclearpage     % #1
-            \input{../src/backinthehighlife}                \sclearpage     % #2
-            \input{../src/blackbird}                        \sclearpage     % #3
-            \input{../src/dimming_of_the_day}               \sclearpage     % #4
-            \input{../src/fragile}                          \sclearpage     % #5
-            \input{../src/havent_we_lost_enough}            \sclearpage     % #6
-            \input{../src/helplesslyhoping}                 \sclearpage     % #7
-            \input{../src/itdoesntmatter}                   \sclearpage     % #8
-            \input{../src/lives_in_the_balance}             \sclearpage     % #9
-            \input{../src/upwherewebelong}                  \sclearpage     % #10
-            \input{../src/sailingtophiladelphia}            \sclearpage     % #11
-            \input{../src/teach_your_children}              \sclearpage     % #12
-            \input{../src/thegreenfieldsoffrance}                           % #13
+            \input{../src/and_so_it_goes}                   \sclearpage
+            \input{../src/backinthehighlife}                \sclearpage
+            \input{../src/blackbird}                        \sclearpage
+            \input{../src/blowinginthewind}                 \sclearpage
+            \input{../src/dimming_of_the_day}               \sclearpage
+            \input{../src/fragile}                          \sclearpage
+            \input{../src/havent_we_lost_enough}            \sclearpage
+            \input{../src/helplesslyhoping}                 \sclearpage
+            \input{../src/itdoesntmatter}                   \sclearpage
+            \input{../src/lives_in_the_balance}             \sclearpage
+            \input{../src/sailingtophiladelphia}            \sclearpage
+            \input{../src/teach_your_children}              \sclearpage
+            \input{../src/thegreenfieldsoffrance}           \sclearpage
+            \input{../src/upwherewebelong}                  \sclearpage
+            \input{../src/walkinginmemphis}
         \end{songs}
 
     \clearpage
     \songsection{Other}
         \begin{songs}{}
-            \input{../src/kaperfahrt}                                       % #1
+            \input{../src/kaperfahrt}
         \end{songs}
 \end{document}
