[Test Realm for background images]
Trying to fit a background image on the first page, the title page. The
background color, no matter whether it's alpha or not, sucks.

--- a/TeX/Chordbook.tex
+++ b/TeX/Chordbook.tex
@@ -1,5 +1,7 @@
 \documentclass[landscape]{../TeX/chordbook}
 
+\usepackage{wallpaper}
+
 \usepackage[%
     colorlinks=true,
     pdfstartview=FitV,
@@ -11,6 +13,7 @@
     ]{hyperref}
 
 \begin{document}
+\ThisCenterWallPaper{0.8}{../TeX/bgimage/josh.png}
 
 \date{\textbf{Erstellt am:} 10. Februar 2014 \\ \textbf{\"{U}berarbeitet am:} \today}
 
