--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -50,10 +50,11 @@
             \input{../src/dunklestunde}                     \sclearpage
             \input{../src/geisterschiff}                    \sclearpage
             \input{../src/grausinddieschwingen}             \sclearpage
+            \input{../src/i_see_fire}                       \sclearpage
             \input{../src/icourtedaweegirl}                 \sclearpage
             \input{../src/ihrsonah}                         \sclearpage
-            \input{../src/i_see_fire}                       \sclearpage
             \input{../src/kleidausrosen}                    \sclearpage
+            \input{../src/lordoftherings}                   \sclearpage
             \input{../src/makingupthemiles}                 \sclearpage
             \input{../src/mordaufdemabort}                  \sclearpage
             \input{../src/nebelueberdenauen}                \sclearpage
@@ -88,7 +89,9 @@
     \songsection{Modern / Rock}{}
         \begin{songs}{}
             \input{../src/everythingburns}                  \sclearpage
+            \input{../src/littletalks}                      \sclearpage
             \input{../src/rollinginthedeep}                 \sclearpage
+            \input{../src/sevennationarmy}                  \sclearpage
             \input{../src/timshel}
         \end{songs}
 
@@ -105,6 +108,7 @@
             \input{../src/helplesslyhoping}                 \sclearpage
             \input{../src/itdoesntmatter}                   \sclearpage
             \input{../src/lives_in_the_balance}             \sclearpage
+            \input{../src/moonshadow}                       \sclearpage
             \input{../src/sailingtophiladelphia}            \sclearpage
             \input{../src/teach_your_children}              \sclearpage
             \input{../src/thegreenfieldsoffrance}           \sclearpage
