--- a/src/littletalks.tex
+++ b/src/littletalks.tex
@@ -1,11 +1,11 @@
 \stepcounter{subsection}
 
 \beginsong{Little Talks}[%
-    by={Julia Sheer & Jon D.},
+    by={Julia Sheer \& Jon D.},
     index={littletalks}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Little Talks - Julia Sheer & Jon D.}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad Little Talks - Julia Sheer \& Jon D.}
 
     \label{littletalks}
 
