[song added - sound of silence]
the song "The Sound of Silence", originally by Simon and Garfunkel,
covered by Disturbed, will be added.

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -92,6 +92,7 @@
             \input{../src/littletalks}                      \sclearpage
             \input{../src/rollinginthedeep}                 \sclearpage
             \input{../src/sevennationarmy}                  \sclearpage
+            \input{../src/soundofsilence.tex}               \sclearpage
             \input{../src/timshel}
         \end{songs}
 
