--- a/src/and_so_it_goes.tex
+++ b/src/and_so_it_goes.tex
@@ -9,6 +9,8 @@
 
     \label{andsoitgoes}
 
+    \textbf{Note: this song is not yet finished!}
+
     \begin{center}
         \gtab{C}{332010:342010}
     \end{center}
