--- a/src/backinthehighlife.tex
+++ b/src/backinthehighlife.tex
@@ -33,7 +33,7 @@
     \endverse
 
     \beginchorus
-        ... \[D]I'll be \[G]back in the \[C]high \[G]life \[C]a\[G]gain
+        \ldots \[D]I'll be \[G]back in the \[C]high \[G]life \[C]a\[G]gain
         \[C]All the doors we \[G]closed one time will \[Dsus4]open \[D]up agai\[G]n
         I'll \[C]be \[G]back in the \[C]high \[G]life \[C]a\[G]gain
         \[C]All the eyes that \[G]watched me once will \[Dsus4]smile and \[D]take me \[G]
