--- a/src/blackbird.tex
+++ b/src/blackbird.tex
@@ -9,6 +9,8 @@
 
     \label{blackbird}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Blackbird singing in the dead of night
         Take these broken wings and learn to fly
