--- a/src/derleiermann.tex
+++ b/src/derleiermann.tex
@@ -9,6 +9,8 @@
 
     \label{derleiermann}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Drüben hinterm Dorfe steht ein Leiermann
         und mit starren Fingern dreht er, was er kann.
