--- a/src/dienackteelfe.tex
+++ b/src/dienackteelfe.tex
@@ -9,6 +9,8 @@
 
     \label{dienackteelfe}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Example verse ...
     \endverse
