--- a/src/dimming_of_the_day.tex
+++ b/src/dimming_of_the_day.tex
@@ -9,6 +9,8 @@
 
     \label{dimmingoftheday}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         This old house is falling down around my ears
         I'm drowning in a river of my tears
