--- a/src/dunklestunde.tex
+++ b/src/dunklestunde.tex
@@ -9,6 +9,8 @@
 
     \label{dunklestunde}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Noch liegt die Welt im Dunkeln
         Kein Mond, kein Stern erhellt die Nacht
