--- a/src/fassbierpaladosen.tex
+++ b/src/fassbierpaladosen.tex
@@ -20,7 +20,7 @@
     \end{center}
 
     \beginverse
-        \[E]Ich besuchte eine MEnschenstadt,
+        \[E]Ich besuchte eine Menschenstadt,
         Ich wollte \[A]gucken, was die einem Zwerg zu bieten hat.
         Ein \[D]Priester sagte, ich solle in die Ferne zieh'n,
         Er gab mir \[A]Schnaps, Bier und ich war \[E] Paladin.
