--- a/src/fragile.tex
+++ b/src/fragile.tex
@@ -9,6 +9,8 @@
 
     \label{fragile}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         If blood will flow when flesh and stell are one
         Drying in the colour of the evening sun.
