--- a/src/grausinddieschwingen.tex
+++ b/src/grausinddieschwingen.tex
@@ -9,6 +9,8 @@
 
     \label{grausinddieschwingen}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         \[Am]Lange der Winter vergangener Tage
         \[D]Trug war die Liebe im Licht \[Am]
