--- a/src/hesapirate.tex
+++ b/src/hesapirate.tex
@@ -9,6 +9,8 @@
 
     \label{hesapirate}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         He escaped from the Island our strong Captain Jack,
         He bound turtles together with the hair of his back.
