--- a/src/icourtedaweegirl.tex
+++ b/src/icourtedaweegirl.tex
@@ -9,6 +9,8 @@
 
     \label{icourtedaweegirl}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         I courted a wee girl for many's the long day,
         And slighted all others who came in my way.
