--- a/src/itdoesntmatter.tex
+++ b/src/itdoesntmatter.tex
@@ -9,6 +9,8 @@
 
     \label{itdoesntmatter}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Falling and spinning, losing and winning, keeping my head
         Watching for signals, wearisome vigil,
