--- a/src/lives_in_the_balance.tex
+++ b/src/lives_in_the_balance.tex
@@ -9,6 +9,8 @@
 
     \label{livesinthebalance}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         I've been waiting for something to happen
         For a week or a month or a year
