--- a/src/madworld.tex
+++ b/src/madworld.tex
@@ -9,6 +9,8 @@
 
     \label{madworld}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         All around me are familiar faces
         Worn out places, worn out faces
