--- a/src/nebelueberdenauen.tex
+++ b/src/nebelueberdenauen.tex
@@ -9,6 +9,8 @@
 
     \label{nebelueberdenauen}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         \[Am]Wo sich einst Blumenpracht ver\[G]streute und \[Am]liebliches Summen die Herzen erfreute \[G] \[Am]
         \[G]Wird bald ein Distel\[Am]wald \[G]sich wiegen, be\[Am]gleitet vom \[G]Surren der l\"{a}stig\[Am]en Fliegen \[G] \[Am]
