--- a/src/ohadelsmann.tex
+++ b/src/ohadelsmann.tex
@@ -9,6 +9,8 @@
 
     \label{ohadelsmann}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         \[Dm]So seht, der Bauer s\"{a}t die Saat des nahen Krieges aus \[A]
         \[Dm]Kein Korn w\"{a}chst dieses Jahr f\"{u}rwahr zur Erntezeit daraus \[A]
