--- a/src/soundofsilence.tex
+++ b/src/soundofsilence.tex
@@ -9,6 +9,8 @@
 
     \label{thesoundofsilence}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Hello darkness, my old firned
         I've come to talk with you again
