--- a/src/stepitoutmary.tex
+++ b/src/stepitoutmary.tex
@@ -9,6 +9,8 @@
 
     \label{stepitoutmary}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         In the village of Kildore lived a maiden young and fair
         Her eyes they shone like diamonds, she had long and golden hair
