--- a/src/timshel.tex
+++ b/src/timshel.tex
@@ -9,6 +9,8 @@
 
     \label{timshel}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Cold is the water
         It freezes your already cold mind
