--- a/src/trigardon.tex
+++ b/src/trigardon.tex
@@ -10,6 +10,8 @@
 
     \label{trigardon}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Ich will euch erz\"{a}hlen von Gl\"{u}ck und von Freude
         Vom Spa\ss{} am Leben und Sein
