--- a/src/untotaufurlaub.tex
+++ b/src/untotaufurlaub.tex
@@ -9,6 +9,8 @@
 
     \label{untotaufurlaub}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Wenn ich aus meinem Fenster glotz'
         Seh' ich nur Monstrosit\"{a}ten-Rotz,
