--- a/src/upwherewebelong.tex
+++ b/src/upwherewebelong.tex
@@ -9,6 +9,8 @@
 
     \label{upwherewebelong}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         \[D]Who know what tomorrow brings
         In a world few hearts survive?
