--- a/src/walkdownthatlonesomeroad.tex
+++ b/src/walkdownthatlonesomeroad.tex
@@ -9,6 +9,8 @@
 
     \label{walkdownthatlonesomeroad}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginchorus
         Walk down that lonesome road
         All by yourself
