--- a/src/walkinginmemphis.tex
+++ b/src/walkinginmemphis.tex
@@ -9,6 +9,8 @@
 
     \label{walkinginmemphis}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Example verse ...
     \endverse
