--- a/src/willstdu.tex
+++ b/src/willstdu.tex
@@ -9,6 +9,8 @@
 
     \label{willstdu}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Komm her und lausche meiner Stimme,
         ich habe Dir was zu erkl\"{a}ren.
