--- a/src/woutmitdenwoelfen.tex
+++ b/src/woutmitdenwoelfen.tex
@@ -9,6 +9,8 @@
 
     \label{woutmitdenwoelfen}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         \[Am]Fl\"{u}sternd das Unheil
         Kein \[G]Vogel, der singt mehr
