--- a/src/yejackobites.tex
+++ b/src/yejackobites.tex
@@ -9,6 +9,8 @@
 
     \label{yejackobites}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginchorus
         Ye Jacobites by name, lend an ear, lend an ear.
         Ye Jacobites by name, lend an ear.
