--- a/src/dragonball.tex
+++ b/src/dragonball.tex
@@ -9,6 +9,8 @@
 
     \label{dragonball}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Du hast l\"{a}ngst gemerkt
         Es ist noch lange nicht vorbei.
