--- a/src/everythingburns.tex
+++ b/src/everythingburns.tex
@@ -9,6 +9,8 @@
 
     \label{everythingburns}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Example verse ...
     \endverse
