--- a/src/hasso.tex
+++ b/src/hasso.tex
@@ -9,6 +9,8 @@
 
     \label{hasso}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Example verse ...
     \endverse
