--- a/src/helplesslyhoping.tex
+++ b/src/helplesslyhoping.tex
@@ -9,6 +9,8 @@
 
     \label{helplesslyhoping}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Helplessly hoping
         Her harlequin hovers nearby
