--- a/src/kickapoo.tex
+++ b/src/kickapoo.tex
@@ -9,6 +9,8 @@
 
     \label{kickapoo}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Example verse ...
     \endverse
