--- a/src/lordoftherings.tex
+++ b/src/lordoftherings.tex
@@ -9,6 +9,8 @@
 
     \label{lordoftherings}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Example verse ...
     \endverse
