--- a/src/sailingtophiladelphia.tex
+++ b/src/sailingtophiladelphia.tex
@@ -9,6 +9,8 @@
 
     \label{sailingtophiladelphia}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse*
         \textnote{Intro}
     \endverse
