--- a/src/sevennationarmy.tex
+++ b/src/sevennationarmy.tex
@@ -9,6 +9,8 @@
 
     \label{sevennationarmy}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Example verse ...
     \endverse
