--- a/src/thebardssong.tex
+++ b/src/thebardssong.tex
@@ -9,6 +9,8 @@
 
     \label{thebardssong}
 
+    \textbf{Note: this song is not yet finished!}
+
     \beginverse
         Now you all know
         The bards and their songs
