--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -80,6 +80,7 @@
             \input{../src/dragonball}                       \sclearpage
             \input{../src/fassbierpaladosen}                \sclearpage
             \input{../src/hesapirate}                       \sclearpage
+            \input{../src/kaperfahrt}                       \sclearpage
             \input{../src/kickapoo}                         \sclearpage
             \input{../src/trigardon}                        \sclearpage
             \input{../src/untotaufurlaub}
@@ -115,11 +116,5 @@
             \input{../src/thegreenfieldsoffrance}           \sclearpage
             \input{../src/upwherewebelong}                  \sclearpage
             \input{../src/walkinginmemphis}
-        \end{songs}
-
-    \clearpage
-    \songsection{Other}
-        \begin{songs}{}
-            \input{../src/kaperfahrt}
         \end{songs}
 \end{document}
