--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -28,93 +28,96 @@
 \renewcommand{\notebgcolor}{notes}
 \renewcommand\printchord[1]{\footnotesize\sffamily\textit{\textcolor{linkcolor}{{#1}}}}
 
-    \clearpage
-    \songsection{A Capella}
-        \begin{songs}{}
-            \input{../src/hasso}                            \sclearpage
-            \input{../src/madworld}                         \sclearpage
-            \input{../src/walkdownthatlonesomeroad}
-        \end{songs}
+    %\clearpage
+    %\songsection{A Capella}
+    %    \begin{songs}{}
+    %        \input{../src/hasso}                            \sclearpage
+    %        \input{../src/madworld}                         \sclearpage
+    %        \input{../src/walkdownthatlonesomeroad}
+    %    \end{songs}
 
-    \clearpage
-    \songsection{Classic}
-        \begin{songs}{}
-            \input{../src/derleiermann}
-        \end{songs}
+    %\clearpage
+    %\songsection{Classic}
+    %    \begin{songs}{}
+    %        \input{../src/derleiermann}
+    %    \end{songs}
 
     \clearpage
     \songsection{Folk and Medieval}
         \begin{songs}{}
             \input{../src/dasbierichinderrechtentrug}       \sclearpage
             \input{../src/derwandersmann}                   \sclearpage
-            \input{../src/dunklestunde}                     \sclearpage
+            %\input{../src/dunklestunde}                     \sclearpage
             \input{../src/geisterschiff}                    \sclearpage
-            \input{../src/grausinddieschwingen}             \sclearpage
+            %\input{../src/grausinddieschwingen}             \sclearpage
             \input{../src/i_see_fire}                       \sclearpage
             \input{../src/icourtedaweegirl}                 \sclearpage
-            \input{../src/ihrsonah}                         \sclearpage
-            \input{../src/kleidausrosen}                    \sclearpage
-            \input{../src/lordoftherings}                   \sclearpage
-            \input{../src/makingupthemiles}                 \sclearpage
+            %\input{../src/ihrsonah}                         \sclearpage
+            %\input{../src/kleidausrosen}                    \sclearpage
+            %\input{../src/lordoftherings}                   \sclearpage
+            %\input{../src/makingupthemiles}                 \sclearpage
             \input{../src/mordaufdemabort}                  \sclearpage
-            \input{../src/nebelueberdenauen}                \sclearpage
-            \input{../src/ohadelsmann}                      \sclearpage
-            \input{../src/prinzessin}                       \sclearpage
-            \input{../src/stepitoutmary}                    \sclearpage
-            \input{../src/tanzmitmir}                       \sclearpage
+            %\input{../src/nebelueberdenauen}                \sclearpage
+            %\input{../src/ohadelsmann}                      \sclearpage
+            %\input{../src/prinzessin}                       \sclearpage
+            \input{../src/senzenina}                        \sclearpage
+            %\input{../src/stepitoutmary}                    \sclearpage
+            %\input{../src/tanzmitmir}                       \sclearpage
             \input{../src/thebardssong}                     \sclearpage
             \input{../src/thebonnyshipthediamond}           \sclearpage
             \input{../src/thedragonborncomes}               \sclearpage
             \input{../src/therattlinbog}                    \sclearpage
-            \input{../src/thewildrover}                     \sclearpage
-            \input{../src/trunckenbolde}                    \sclearpage
+            %\input{../src/thewildrover}                     \sclearpage
+            %\input{../src/trunckenbolde}                    \sclearpage
             \input{../src/willstdu}                         \sclearpage
-            \input{../src/woutmitdenwoelfen}                \sclearpage
+            %\input{../src/woutmitdenwoelfen}                \sclearpage
             \input{../src/yejackobites}
         \end{songs}
 
     \clearpage
     \songsection{Fun}
         \begin{songs}{}
-            \input{../src/dienackteelfe}                    \sclearpage
-            \input{../src/dragonball}                       \sclearpage
+            %\input{../src/dienackteelfe}                    \sclearpage
+            %\input{../src/dragonball}                       \sclearpage
+            \input{../src/buenastardesamigo}                \sclearpage
             \input{../src/fassbierpaladosen}                \sclearpage
             \input{../src/hesapirate}                       \sclearpage
-            \input{../src/kaperfahrt}                       \sclearpage
-            \input{../src/kickapoo}                         \sclearpage
+            %\input{../src/kaperfahrt}                       \sclearpage
+            %\input{../src/kickapoo}                         \sclearpage
             \input{../src/trigardon}                        \sclearpage
-            \input{../src/untotaufurlaub}
+            %\input{../src/untotaufurlaub}
         \end{songs}{}
 
-    \clearpage
-    \songsection{Modern / Rock}{}
-        \begin{songs}{}
-            \input{../src/everythingburns}                  \sclearpage
-            \input{../src/littletalks}                      \sclearpage
-            \input{../src/rollinginthedeep}                 \sclearpage
-            \input{../src/sevennationarmy}                  \sclearpage
-            \input{../src/soundofsilence.tex}               \sclearpage
-            \input{../src/timshel}
-        \end{songs}
+    %\clearpage
+    %\songsection{Modern / Rock}{}
+    %    \begin{songs}{}
+    %        \input{../src/everythingburns}                  \sclearpage
+    %        \input{../src/littletalks}                      \sclearpage
+    %        \input{../src/rollinginthedeep}                 \sclearpage
+    %        \input{../src/sevennationarmy}                  \sclearpage
+    %        \input{../src/soundofsilence.tex}               \sclearpage
+    %        \input{../src/timshel}
+    %    \end{songs}
 
     \clearpage
     \songsection{Oldies}
         \begin{songs}{}
-            \input{../src/and_so_it_goes}                   \sclearpage
+            %\input{../src/and_so_it_goes}                   \sclearpage
             \input{../src/backinthehighlife}                \sclearpage
-            \input{../src/blackbird}                        \sclearpage
-            \input{../src/blowinginthewind}                 \sclearpage
-            \input{../src/dimming_of_the_day}               \sclearpage
+            %\input{../src/blackbird}                        \sclearpage
+            %\input{../src/blowinginthewind}                 \sclearpage
+            %\input{../src/dimming_of_the_day}               \sclearpage
             \input{../src/fragile}                          \sclearpage
             \input{../src/havent_we_lost_enough}            \sclearpage
-            \input{../src/helplesslyhoping}                 \sclearpage
-            \input{../src/itdoesntmatter}                   \sclearpage
+            \input{../src/hallelujah}                       \sclearpage
+            %\input{../src/helplesslyhoping}                 \sclearpage
+            %\input{../src/itdoesntmatter}                   \sclearpage
             \input{../src/lives_in_the_balance}             \sclearpage
-            \input{../src/moonshadow}                       \sclearpage
-            \input{../src/sailingtophiladelphia}            \sclearpage
+            %\input{../src/moonshadow}                       \sclearpage
+            %\input{../src/sailingtophiladelphia}            \sclearpage
             \input{../src/teach_your_children}              \sclearpage
             \input{../src/thegreenfieldsoffrance}           \sclearpage
-            \input{../src/upwherewebelong}                  \sclearpage
-            \input{../src/walkinginmemphis}
+            %\input{../src/upwherewebelong}                  \sclearpage
+            %\input{../src/walkinginmemphis}
         \end{songs}
 \end{document}
