--- a/src/geisterschiff.tex
+++ b/src/geisterschiff.tex
@@ -58,7 +58,7 @@
         \[Em]Dann, ein \[G]Feuer in der Nach\[D]t, das Schiff in \[Bm]Flammen lichter\[Em]loh!
         Seht es \[G]ist erneut er\[D]wacht, ein \[Bm]Mahnmal eine \[Em]Warnung \[Am]wohl!
         \[Em] Es leuchtet \[G]hell, es leuchtet \[D]weit, es ist \[Bm]nicht zu \"{u}ber\[Em]seh'n
-        Und kein \[G]and'rer Kapit\"{a}n sah seit\[Bm]her sein Boot zu \[E]Grunde \[Am]geh'n!
+        Und kein \[G]and'rer Kapit\[D]\"{a}n sah seit\[Bm]her sein Boot zu \[E]Grunde \[Am]geh'n!
     \endchorus
 
     \beginverse*
@@ -85,7 +85,7 @@
         \lrep \[Em]Dann, ein \[G]Feuer in der Nach\[D]t, das Schiff in \[Bm]Flammen lichter\[Em]loh!
         Seht es \[G]ist erneut er\[D]wacht, ein \[Bm]Mahnmal eine \[Em]Warnung \[Am]wohl!
         \[Em] Es leuchtet \[G]hell, es leuchtet \[D]weit, es ist \[Bm]nicht zu \"{u}ber\[Em]seh'n
-        Und kein \[G]and'rer Kapit\"{a}n sah seit\[Bm]her sein Boot zu \[E]Grunde \[Am]geh'n! \rrep \rep{2}
+        Und kein \[G]and'rer Kapit\[D]\"{a}n sah seit\[Bm]her sein Boot zu \[E]Grunde \[Am]geh'n! \rrep \rep{2}
     \endchorus
 
     \beginverse*
