--- a/src/hesapirate.tex
+++ b/src/hesapirate.tex
@@ -31,10 +31,10 @@
     \endchorus
 
     \beginverse*
-        And the Pearl with its crew sails the ocean tonight
-        And the darkness reveals every wound can be healed.
-        But the moonlight displays what may hide from your side
-        When your eyes are blinded by daylight
+        And the \[Dm]Pearl with its \[C]crew sails the \[F]ocean ton\[C]ight
+        And the \[F]darkness re\[C]veals every \[Dm]wound \[Am]can be \[Dm]healed.
+        But the \[Dm]moonlight displ\[C]ays what may \[F]hide from your \[Bb]side
+        When your \[F]eyes are \[G5]blinded by \[Dm]day\[Am]-\[Dm]light
     \endverse
 
     \beginchorus
