[New Song: Layla]
the song layla will be added. The chords are still missing, due to
verification

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -112,6 +112,7 @@
             \input{../src/hallelujah}                       \sclearpage
             %\input{../src/helplesslyhoping}                 \sclearpage
             %\input{../src/itdoesntmatter}                   \sclearpage
+            \input{../src/layla.tex}                        \sclearpage
             \input{../src/lives_in_the_balance}             \sclearpage
             %\input{../src/moonshadow}                       \sclearpage
             %\input{../src/sailingtophiladelphia}            \sclearpage
