--- a/src/senzenina.tex
+++ b/src/senzenina.tex
@@ -5,7 +5,7 @@
     index={senzenina}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Senzenina - Kieran Halpin}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Senzenina} --- Kieran Halpin}
 
     \label{senzenina}
 
